# IDE

./: .gitignore  Cargo.toml  readme.md
src/: main.rs  mod.rs
src/backend/: mod.rs
src/backend/activity_bar_left/: activity_bar_left_logic.rs  mod.rs
src/backend/activity_bar_right/: activity_bar_right_logic.rs  mod.rs
src/backend/code_agent/: agent.rs  agent_server_logic.rs  autoprompt.rs  chat.rs  code_agent_logic.rs  context.rs  files_changed.rs  hot_swapper.rs  lazy_loader.rs  mod.rs  model_loader.rs
src/backend/code_editor/: backup.rs  code_editor_logic.rs  mod.rs  saving.rs  syntax_highlighting.rs
src/backend/explorer_bar/: explorer_bar_logic.rs
src/backend/file_system/: file_system_logic.rs
src/backend/project_manager/: mod.rs  project_manager_logic.rs
src/backend/script_runner/: script_runner_logic.rs
src/backend/search_bar/: search_bar_logic.rs
src/backend/server/: mod.rs  server_logic.rs  server_port_logic.rs
src/backend/settings_manager/: mod.rs  settings_manager_logic.rs
src/backend/shell_terminal/: mod.rs  shell_terminal_list_logic.rs  shell_terminal_logic.rs  shell_terminal_menu_logic.rs
src/backend/special_buttons/: mod.rs  special_buttons_logic.rs
src/backend/status_bar/: mod.rs  status_bar_logic.rs
src/frontend/: main.rs  mod.rs  style.rs
src/frontend/code_agent_ui/: codeagent.rs  codeagentactivitybar.rs  mod.rs
src/frontend/code_editor_ui/: code_editor.rs  mod.rs
src/frontend/explorer_ui/: explorer.rs  file_explorer.rs  file_explorer_activity_bar.rs  mod.rs
src/frontend/other_window_ui/: mod.rs
(+26 files in other folders)
