[package]
name = "jadio_ide"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.25"
egui = "0.25"
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"